#793-fix-align

--- a/main/local_modules/shared_web_theme/static/src/css/_main.scss
+++ b/main/local_modules/shared_web_theme/static/src/css/_main.scss
@@ -131,8 +131,9 @@ body {
 	font-size: 1em;
 	line-height: 1;
 	vertical-align: baseline;
-	padding: 0.66em;
-	margin: 0.66em auto;
+	padding: 0 1em;
+	margin: 0.55em auto;
+	height: 38px;
 	
 	border-radius: 5px !important;
 	-webkit-border-radius: 5px !important;
